# kultivait

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  TODO-AGY.md  TODO-LOCAL-BS.md  TODO.md  posthog-setup-report.md  pyproject.toml  vercel.json
docs/superpowers/plans/: 2026-07-14-init-hardware-tuning.md
docs/superpowers/specs/: 2026-07-03-copy-prompt-button-design.md  2026-07-14-init-hardware-tuning-design.md
experiments/: routing_trust.py
experiments/distill_eval/: facts.py  results.json  run.py
experiments/distill_eval/corpus/: architecture.txt  debugging.txt  ratelimiter.txt
landing/: index.html  install.sh  start.md
src/kultivait/: __init__.py  backends.py  bootstrap.py  cli.py  config.py  escalations.py  evals.py  gates.py  hardware.py  ledger.py  router.py  seeds.py  server.py  tui.py
tests/: test_backends.py  test_bootstrap.py  test_cli_init.py  test_config.py  test_evals.py  test_gates.py  test_hardware.py  test_harvest_format.py  test_ledger.py  test_router.py  test_server.py  test_tui.py
